--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 .env.test.local
 .env.production.local
 
+# IDE & Editor directories
+.vscode/
+.idea/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
